[gd_scene load_steps=19 format=2]

[ext_resource path="res://arena/arena.gd" type="Script" id=1]
[ext_resource path="res://arena/bottom_box.tscn" type="PackedScene" id=2]
[ext_resource path="res://arena/flipper.tscn" type="PackedScene" id=3]
[ext_resource path="res://arena/limits.tscn" type="PackedScene" id=4]
[ext_resource path="res://components/pin.tscn" type="PackedScene" id=5]
[ext_resource path="res://balls/launcher.tscn" type="PackedScene" id=6]
[ext_resource path="res://components/barrier.tscn" type="PackedScene" id=7]
[ext_resource path="res://components/super_pin.tscn" type="PackedScene" id=8]
[ext_resource path="res://fields/small_field.tscn" type="PackedScene" id=9]
[ext_resource path="res://fields/big_field.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/ballBlue_10.png" type="Texture" id=11]
[ext_resource path="res://assets/default_font.tres" type="DynamicFont" id=12]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( 472, 120 )
b = Vector2( 0, 120 )

[sub_resource type="PhysicsMaterial" id=2]
friction = 0.0
bounce = 1.0

[sub_resource type="CircleShape2D" id=3]
radius = 16.0

[sub_resource type="CircleShape2D" id=7]
radius = 16.0

[sub_resource type="PhysicsMaterial" id=5]
bounce = 1.0

[sub_resource type="SegmentShape2D" id=6]
a = Vector2( 320, -240 )
b = Vector2( 0.000244141, 0 )

[node name="Arena" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Polygon2D" parent="."]
color = Color( 0.803922, 0.803922, 0.803922, 1 )
polygon = PoolVector2Array( 0, 0, 480, 0, 480, 720, 0, 720 )

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 0.352941, 0.235294, 0.235294, 1 )
polygon = PoolVector2Array( 0, 0, 128, 0, 0, 128 )

[node name="Barrier" parent="." instance=ExtResource( 7 )]
position = Vector2( 464, 8 )
rotation = -0.523599

[node name="OutOfBounds" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2147483650

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutOfBounds"]
position = Vector2( 0, -120 )
shape = SubResource( 1 )

[node name="BonusPin" type="Node2D" parent="."]
position = Vector2( 224, 224 )

[node name="SuperPin" type="StaticBody2D" parent="BonusPin"]
physics_material_override = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BonusPin/SuperPin"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="BonusPin"]
modulate = Color( 0, 1, 0, 1 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 11 )

[node name="Label" type="Label" parent="BonusPin"]
margin_left = -160.0
margin_top = -160.0
margin_right = 160.0
margin_bottom = 160.0
custom_fonts/font = ExtResource( 12 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="BonusPin"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BonusPin/Area2D"]
shape = SubResource( 7 )

[node name="SuperPin2" parent="." instance=ExtResource( 8 )]
modulate = Color( 0.392157, 0, 0.501961, 1 )
position = Vector2( 8, 224 )

[node name="BottomBox" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 720 )

[node name="Launcher" parent="." instance=ExtResource( 6 )]
position = Vector2( 463, 554 )
impulse = 80.0

[node name="Bottom" parent="." instance=ExtResource( 4 )]
position = Vector2( 240, 720 )
scale = Vector2( 1.75, 1 )

[node name="Top" parent="." instance=ExtResource( 4 )]
position = Vector2( 240, 0 )
scale = Vector2( 1.75, 1 )

[node name="Top2" parent="." instance=ExtResource( 4 )]
position = Vector2( 240, -16 )
scale = Vector2( 1.75, 1 )

[node name="Left" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 360 )
rotation = -1.57079
scale = Vector2( 2.5, 1 )

[node name="Right" parent="." instance=ExtResource( 4 )]
position = Vector2( 480, 360 )
rotation = 1.57079
scale = Vector2( 2.5, 1 )

[node name="Channel" parent="." instance=ExtResource( 4 )]
position = Vector2( 448, 512 )
rotation = -1.57079
scale = Vector2( 1.5, 0.75 )

[node name="LongBarrier" parent="." instance=ExtResource( 4 )]
position = Vector2( 72, 64 )
rotation = -0.785398

[node name="Fields" type="Node2D" parent="."]

[node name="BigField2" parent="Fields" instance=ExtResource( 10 )]
position = Vector2( 128, 320 )

[node name="BigField3" parent="Fields" instance=ExtResource( 10 )]
position = Vector2( 320, 320 )

[node name="BigField4" parent="Fields" instance=ExtResource( 10 )]
position = Vector2( 224, 512 )

[node name="SmallField" parent="Fields" instance=ExtResource( 9 )]
position = Vector2( 64, 512 )

[node name="SmallField2" parent="Fields" instance=ExtResource( 9 )]
position = Vector2( 384, 512 )

[node name="SmallField3" parent="Fields" instance=ExtResource( 9 )]
position = Vector2( 160, 128 )

[node name="SmallField4" parent="Fields" instance=ExtResource( 9 )]
position = Vector2( 288, 128 )

[node name="Gate" type="StaticBody2D" parent="."]
position = Vector2( 448, 280 )
scale = Vector2( 0.1, 0.1 )
physics_material_override = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gate"]
shape = SubResource( 6 )
one_way_collision = true

[node name="Pins" type="Node2D" parent="."]

[node name="Pin5" parent="Pins" instance=ExtResource( 5 )]
position = Vector2( 448, 280 )

[node name="Pin3" parent="Pins" instance=ExtResource( 5 )]
position = Vector2( 8, 416 )

[node name="Pin4" parent="Pins" instance=ExtResource( 5 )]
position = Vector2( 440, 416 )

[node name="Pin6" parent="Pins" instance=ExtResource( 5 )]
position = Vector2( 48, 416 )

[node name="Pin19" parent="Pins" instance=ExtResource( 5 )]
position = Vector2( 32, 448 )

[node name="Pin20" parent="Pins" instance=ExtResource( 5 )]
position = Vector2( 224, 384 )

[node name="Pin22" parent="Pins" instance=ExtResource( 5 )]
position = Vector2( 416, 448 )

[node name="Pin7" parent="Pins" instance=ExtResource( 5 )]
position = Vector2( 80, 416 )

[node name="Pin8" parent="Pins" instance=ExtResource( 5 )]
position = Vector2( 112, 416 )

[node name="Pin9" parent="Pins" instance=ExtResource( 5 )]
position = Vector2( 144, 416 )

[node name="Pin10" parent="Pins" instance=ExtResource( 5 )]
position = Vector2( 176, 416 )

[node name="Pin11" parent="Pins" instance=ExtResource( 5 )]
position = Vector2( 32, 384 )

[node name="Pin12" parent="Pins" instance=ExtResource( 5 )]
position = Vector2( 416, 384 )

[node name="Pin13" parent="Pins" instance=ExtResource( 5 )]
position = Vector2( 272, 416 )

[node name="Pin14" parent="Pins" instance=ExtResource( 5 )]
position = Vector2( 304, 416 )

[node name="Pin15" parent="Pins" instance=ExtResource( 5 )]
position = Vector2( 336, 416 )

[node name="Pin16" parent="Pins" instance=ExtResource( 5 )]
position = Vector2( 368, 416 )

[node name="Pin17" parent="Pins" instance=ExtResource( 5 )]
position = Vector2( 400, 416 )

[node name="Flipper" parent="." instance=ExtResource( 3 )]
position = Vector2( 472, 48 )
[connection signal="body_entered" from="OutOfBounds" to="." method="_on_OutOfBounds_body_entered"]
[connection signal="body_entered" from="BonusPin/Area2D" to="." method="_on_BonusPin_body_entered"]
[connection signal="bottom_score" from="BottomBox" to="." method="_on_BottomBox_bottom_score" flags=3]
[connection signal="ball_launched" from="Launcher" to="." method="_on_Launcher_ball_launched"]
